# Money-Flow-web

./: README.md  config.py  conftest.py  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  auth.py  configuration.py  forms.py  models.py  routes.py
app/templates/: base.html
application/: __init__.py  auth.py  forms.py  init_database.py  limits.py  models.py  routes.py  settings.py
application/controllers/: auth.py  categories.py  limits.py  routes.py
application/models/: __init__.py  category.py  currency.py  transaction.py  user.py  user_categories_limits_asc.py
application/services/: categories_info.py  currency_converter.py  database_manager.py  date_handlers.py  email.py  get_offset_week_days.py  offsets.py  sidebar_links.py
application/static/styles/: common.css  forgot_password.css  login.css
application/templates/: base.html  forgot_password.html  login.html  main.html  main_page_base.html  password_reset.html  register.html  settings.html
application/templates/auth/: auth_base.html  forgot_password.html  login.html  password_reset.html  register.html
application/templates/categories/: add_category.html  categories.html
application/templates/email/: password_reset.html  password_reset.txt
application/templates/limits/: add_limit.html  limit.html  limits.html
application/templates/settings/: settings.html
migrations/versions/: 967fa33fcdfe_.py  b3392ae97a47_.py
tests/controllers/: test_auth.py  test_categories.py  test_limits.py  test_routes.py  test_settings.py
(+2 files in other folders)
