[tool.poetry]
name = "money-flow-web"
version = "0.1.0"
description = ""
authors = ["Ruslan <ruslangazizov36@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.0.2"
Flask-Mail = "0.9.1"
Flask-SQLAlchemy = "2.5.1"
Flask-Migrate = "3.1.0"
Flask-Login = "0.5.0"
Flask-JWT = "0.3.2"
Flask-WTF = "0.15.1"
environs = "9.3.4"
email-validator = "1.1.3"
coverage = "6.0.2"
gunicorn = "20.1.0"
pytest = "6.2.5"
pytest-cov = "3.0.0"
pytest-flask = "1.2.0"
psycopg2-binary = "2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
